esta terminada la tarea

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -51,8 +51,8 @@ ggplot(stpsxtime, aes(x=Interval, y=steps)) + geom_line(colour="blue")
 2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 ```{r echo=TRUE}
 stpsxtime_max<-summarize(group_by(dt,interval),max(steps))
-colnames(stpsxtime_max)=c("Interval","steps")
-ggplot(stpsxtime_max, aes(x=Interval, y=steps)) + geom_line(colour="green")
+colnames(stpsxtime_max)=c("interval","steps")
+ggplot(stpsxtime_max, aes(x=interval, y=steps)) + geom_line(colour="green")
 
 ```
 
@@ -115,8 +115,18 @@ The mean do not change `r mean_first` = `r mean_second`, the median is a little 
 typeofDay<-vector()
 typeofDay<-as.factor(ifelse(as.POSIXlt(new_data$date)$wday %in% c(0,6),"weekend","weekday"))
 new_data<-cbind(new_data,typeofDay)
+stpsxtime<-summarize(group_by(new_data,interval,typeofDay),mean(steps))
+colnames(stpsxtime)[3]="steps"
 
 ```
 
 
-1. Make a panel plot containing a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was created using 
+2. Make a panel plot containing a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was created using 
+
+
+```{r echo=TRUE}
+
+ ggplot(stpsxtime, aes(x=interval, y=steps)) + geom_line(colour="blue")+ facet_wrap(~ typeofDay , ncol=1)+theme(strip.text = element_text(size=rel(1.5)),strip.background = element_rect(fill="pink",size=2))
+
+```
+
