--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -52,7 +52,7 @@ ggplot(stpsxtime, aes(x=Interval, y=steps)) + geom_line(colour="blue")
 ```{r echo=TRUE}
 stpsxtime_max<-summarize(group_by(dt,interval),max(steps))
 colnames(stpsxtime_max)=c("interval","steps")
-ggplot(stpsxtime_max, aes(x=interval, y=steps)) + geom_line(colour="green")
+ggplot(stpsxtime_max, aes(x=interval, y=steps)) + geom_line(colour="darkgreen")
 
 ```
 
@@ -121,7 +121,7 @@ colnames(stpsxtime)[3]="steps"
 ```
 
 
-2. Make a panel plot containing a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was created using 
+2. Make a panel plot containing a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was created using **simulated data**
 
 
 ```{r echo=TRUE}
